[gd_scene load_steps=6 format=3 uid="uid://dyrsbe5x01lgo"]

[ext_resource type="Script" uid="uid://nfsup0uuf65l" path="res://scenes/main/main_game/main_game.gd" id="1_2bvax"]
[ext_resource type="Script" uid="uid://bgb1l61v1xrxr" path="res://scenes/ui/main_view/main_view.gd" id="2_11so6"]
[ext_resource type="PackedScene" uid="uid://hcmv6b2gg6ho" path="res://scenes/ui/game_system_nav_bar/game_system_nav_bar.tscn" id="2_sp8i7"]
[ext_resource type="PackedScene" uid="uid://b1rl1n8ceijc8" path="res://scenes/game_systems/cycling/cycling_view/cycling_view.tscn" id="3_7ijcf"]
[ext_resource type="Script" uid="uid://blsdqgbv3bgin" path="res://scenes/main/main_game/save_timer.gd" id="4_11so6"]

[node name="MainGame" type="Node2D"]
script = ExtResource("1_2bvax")
reset_save_data = true

[node name="MainView" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("2_11so6")

[node name="MainViewContainer" type="Panel" parent="MainView"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="ZoneView" type="Control" parent="MainView/MainViewContainer"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Label" type="Label" parent="MainView/MainViewContainer/ZoneView"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "ZONE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CyclingView" parent="MainView/MainViewContainer" instance=ExtResource("3_7ijcf")]
layout_mode = 1
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ScriptingView" type="Control" parent="MainView/MainViewContainer"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Label" type="Label" parent="MainView/MainViewContainer/ScriptingView"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "SCRIPTING"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ElixirMakingView" type="Control" parent="MainView/MainViewContainer"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Label" type="Label" parent="MainView/MainViewContainer/ElixirMakingView"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "ELIXIR MAKING
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SoulSmithingView" type="Control" parent="MainView/MainViewContainer"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Label" type="Label" parent="MainView/MainViewContainer/SoulSmithingView"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "SOULSMITHING"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AdventuringView" type="Control" parent="MainView/MainViewContainer"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Label" type="Label" parent="MainView/MainViewContainer/AdventuringView"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "ADVENTURING"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameSystemNavBar" parent="MainView" instance=ExtResource("2_sp8i7")]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2
mouse_filter = 2

[node name="SaveTimer" type="Timer" parent="."]
autostart = true
script = ExtResource("4_11so6")
